Changed the title so it's easier to differentiate the browser tabs of the mockup vs the actual web page. A bit late.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="css/style.css" type="text/css" />
       <link rel="stylesheet" href="./css/normalize.css" type="text/css">
 
-      <title>CSS Mockup Activity</title>
+      <title>CSS Challenge</title>
    </head>
 
    <body>
