Figured out that the CNM server increases the root html font-size by 50%. Setting the html tag font-size to 10px comes close to fixing this for the CNM server deployment, but messes up the font size everywhere else - any other deployment.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                </div>
 
                <div>
-                  <label for="emailEmail">Email</label>
+                  <label for="email">Email</label>
                   <input type="email" name="email" id="email" />
                </div>
 
