--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
          <div class="header-flex-container">
             <h1>Dylan McDonald:~$</h1>
-            <em>Compupu Scientist. Cat Lover. Picard Fan.</em>
+            <em>Computer Scientist. Cat Lover. Picard Fan.</em>
          </div>
       </header>
 
